# hotpath-rs

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml  hotpath-comment.yml  hotpath-profile.yml
crates/hotpath/: Cargo.toml
crates/hotpath-macros/: Cargo.toml
crates/hotpath-macros/src/: lib.rs  lib_off.rs  lib_on.rs
crates/hotpath/src/: http_server.rs  json.rs  lib.rs  lib_off.rs  lib_on.rs  output.rs  tid.rs
crates/hotpath/src/lib_on/: futures.rs  (+3 more)
crates/hotpath/tests/: channels_crossbeam.rs  channels_ftc.rs  channels_std.rs  channels_tokio.rs  functions.rs  futures.rs  hotpath_integration.rs
crates/test-all-features/: Cargo.toml
crates/test-all-features/examples/: basic_all_features.rs
crates/test-channels-crossbeam/: Cargo.toml
crates/test-channels-crossbeam/examples/: basic_crossbeam.rs  basic_json_crossbeam.rs  closed_crossbeam.rs  console_feed_crossbeam.rs  iter_crossbeam.rs  slow_consumer_crossbeam.rs
crates/test-channels-ftc/: Cargo.toml
crates/test-channels-ftc/examples/: basic_ftc.rs  basic_json_ftc.rs  closed_ftc.rs  console_feed_ftc.rs  iter_ftc.rs  oneshot_closed_ftc.rs  slow_consumer_ftc.rs
crates/test-channels-futures/: Cargo.toml
crates/test-channels-std/: Cargo.toml
crates/test-channels-std/examples/: basic_json_std.rs  basic_std.rs  closed_std.rs  console_feed_std.rs  iter_std.rs  slow_consumer_std.rs  test_macro_order.rs
crates/test-channels-tokio/: Cargo.toml
crates/test-smol-async/: Cargo.toml
crates/test-streams/: Cargo.toml
crates/test-tokio-async/: Cargo.toml
(+54 files in other folders)
