[package]
name = "test-all-features"
version = "0.0.0"
publish = false
edition = "2021"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[dependencies]
hotpath = { path = "../hotpath", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
